--- a/index.html
+++ b/index.html
@@ -1,91 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brún Restaurant</title>
-    <link rel="stylesheet" href="/style.css">
-</head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-<body>
+  <body>
+    <nav class="navbar"> 
+      <a href=""><img src="images/logo-small.svg" alt="" /></a>
+      <ul>
+        <li>
+          <a href="/menu">Menu</a>
+        </li>
+        <li>
+          <a href="/about">About</a>
+        </li>
+        <li>
+          <a href="/reservations">Reservations</a>
+        </li>
+      </ul>
+    </nav>
 
-   <nav>
-    <ul class="navbar">
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-    </ul>
-   </nav> 
+    <header class="logo-header">
+      <img src="images/logo-big.svg" alt="" />
+    </header>
 
-   <header>
-        <img src="" alt="">
-   </header>
+    <main>
+      <section class="menu-section">
+        <h2>Evening Menu</h2>
+      </section>
 
-   <div>
-    <section>
-        <h2></h2>
-    </section>
-
-    <section>
+      <section class="menu-section featured">
         <div>
-            <img src="" alt="">
-            <p></p>
+          <img src="images/steak.svg" alt="" />
+          <p>
+            BEEF TENDERLOIN The tenderloin is considered the best part of the
+            beef. 6.990 kr.
+          </p>
         </div>
         <div>
-            <img src="" alt="">
-            <p></p>
+          <img src="images/Dal Makhni.svg" alt="" />
+          <p>
+            SHELLFISH SOUP Icelandic shrimps, mini scallops and langoustine.
+            2.990 kr.
+          </p>
         </div>
         <div>
-            <img src="" alt="">
-            <p></p>
+          <img src="images/Chicken.svg" alt="" />
+          <p>
+            CHICKEN With spring onion and marinated in fresh herbs 2.190 kr.
+          </p>
         </div>
-    </section>
+      </section>
 
-    <section>
-        <img src="" alt="">
-        <p></p>
-        <img src="" alt="">
-        <p></p>
-    </section>
-
-    <section>
-        <h2></h2>
-        <p></p>
-    </section>
-
-    <footer>
+      <section class="">
         <div>
-            <p></p>
-            <p></p>
+          <img src="images/wine.svg" alt="" />
+          <p>
+            THE WINE LIST Our wine list is ideal for pairing with our menu and
+            we offer a good selection of wines.
+          </p>
         </div>
         <div>
-            <ul>
-                <li>
-                    <a href="">
-                        <img src="" alt="">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="" alt="">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="" alt="">
-                    </a>
-                </li>
-
-            </ul>
+          <img src="images/dessert.svg" alt="" />
+          <p>
+            DESSERT PLATTER Selection of desserts, exotic fruits, ice cream and
+            coffee. 6.990 kr.
+          </p>
         </div>
+      </section>
 
+      <section class="about-section">
+        <h2>About Brún</h2>
+        <p>
+          Brún restaurant is situated in a 160 year old building in the centre
+          of Reykjavík. We like to think that Food is for your body and Music is
+          for your soul.
+        </p>
+        <p>
+          The food is in the Icelandic brasserie style of food, elegantly
+          prepared by our skilled and enthusiastic chefs, using the Icelandic
+          finest ingredients.
+        </p>
+      </section>
+    </main>
+
+    <footer class="cover-footer">
+      <div>
+        <div class="grid-container">
+          <div class="grid-item">Brún Restaurant</div>
+          <div class="grid-item">Phone 571-7977</div>
+          <div class="grid-item">Lækjagata 5</div>
+          <div class="grid-item">info@brunrestaurant</div>
+          <div class="grid-item">101 Reykjavík</div>
+          <div class="grid-item">Copyright © 2020 Brún Restaurant</div>
+        </div>
+      </div>
+      <div class="icons">
+        <ul>
+          <li>
+            <a href="">
+              <img src="images/facebook.svg" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/Instagram.svg" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/trip.svg" alt="" />
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
-
-   </div>
-
-
-</body>
-
+  </body>
 </html>
