filled in the css fine tuning needid

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <nav class="navbar"> 
+    <nav class="navbar">
       <a href=""><img src="images/logo-small.svg" alt="" /></a>
       <ul>
         <li>
@@ -40,39 +40,43 @@
         <div>
           <img src="images/steak.svg" alt="" />
           <p>
-            BEEF TENDERLOIN The tenderloin is considered the best part of the
-            beef. 6.990 kr.
+            BEEF TENDERLOIN<br />
+            The tenderloin is consideredthe best part of the beef.<br />
+            6.990 kr.
           </p>
         </div>
         <div>
           <img src="images/Dal Makhni.svg" alt="" />
           <p>
-            SHELLFISH SOUP Icelandic shrimps, mini scallops and langoustine.
-            2.990 kr.
+            SHELLFISH SOUP<br />
+            Icelandic shrimps, mini scallops and langoustine. <br />2.990 kr.
           </p>
         </div>
         <div>
           <img src="images/Chicken.svg" alt="" />
           <p>
-            CHICKEN With spring onion and marinated in fresh herbs 2.190 kr.
+            CHICKEN<br />
+            With spring onion and marinated in fresh herbs <br />2.190 kr.
           </p>
         </div>
       </section>
 
-      <section class="">
-        <div>
-          <img src="images/wine.svg" alt="" />
-          <p>
-            THE WINE LIST Our wine list is ideal for pairing with our menu and
-            we offer a good selection of wines.
-          </p>
-        </div>
-        <div>
-          <img src="images/dessert.svg" alt="" />
-          <p>
-            DESSERT PLATTER Selection of desserts, exotic fruits, ice cream and
-            coffee. 6.990 kr.
-          </p>
+      <section class="dessert-section">
+        <div class="dessert-container">
+          <div class="wine">
+            <img src="images/wine.svg" alt="" />
+            <p>
+              DESSERT PLATTER<br>Selection of desserts, exotic fruits
+              and coffee.<br>6.990 kr.
+            </p>
+          </div>
+          <div class="desserts">
+            <p>
+              THE WINE LIST<br>Our wine list is ideal for pairing with our menu and
+              we offer a good selection of wines.
+            </p>
+            <img src="images/dessert.svg" alt="" />
+          </div>
         </div>
       </section>
 
