--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     </nav>
 
     <header class="logo-header">
-      <img src="images/logo-big.svg" alt="" />
+      <h1>People<br>disappoint.<br>
+        Fine cuisine<br>
+        never does.</h1>
     </header>
 
     <main>
@@ -66,8 +68,8 @@
           <div class="wine">
             <img src="images/wine.svg" alt="" />
             <p>
-              DESSERT PLATTER<br>Selection of desserts, exotic fruits
-              and coffee.<br>6.990 kr.
+              DESSERT<br>Selection of desserts, exotic fruits
+              and coffee.<br>1.990 kr.
             </p>
           </div>
           <div class="desserts">
