--- a/index.html
+++ b/index.html
@@ -67,16 +67,19 @@
         <div class="dessert-container">
           <div class="wine">
             <img src="images/wine.svg" alt="" />
+            <h3>THE WINE LIST</h3>
             <p>
-              DESSERT<br>Selection of desserts, exotic fruits
-              and coffee.<br>1.990 kr.
+             Our wine list is ideal for pairing with our menu and
+              we offer a good selection of wines.
             </p>
           </div>
           <div class="desserts">
+            <h3>DESSERT</h3>
             <p>
-              THE WINE LIST<br>Our wine list is ideal for pairing with our menu and
-              we offer a good selection of wines.
+              Selection of desserts, exotic fruits
+              and coffee.<br>1.990 kr.
             </p>
+            <small></small>
             <img src="images/dessert.svg" alt="" />
           </div>
         </div>
