--- a/index.html
+++ b/index.html
@@ -65,29 +65,25 @@
         </div>
       </section>
 
-      <hr />
+      <hr/>
 
       <section class="dessert-section">
-        <div class="dessert-container">
-          <div class="wine">
-            <img src="images/wine.svg" alt="" />
-            <h3>THE WINE LIST</h3>
-            <p>
-              Our wine list is ideal for pairing with our menu and we offer a
-              good selection of wines.
-            </p>
-          </div>
-          <div class="desserts">
-            <img src="images/dessert.svg" alt="" />
-            <h3>DESSERT</h3>
-            <p>
-              Selection of desserts, exotic fruits and coffee.<br />1.990 kr.
-            </p>
-          </div>
+        <div class="wine">
+          <img src="images/wine.svg" alt="" />
+          <h3>THE WINE LIST</h3>
+          <p>
+            Our wine list is ideal for pairing with our menu and we offer a good
+            selection of wines.
+          </p>
+        </div>
+        <div class="desserts">
+          <img src="images/dessert.svg" alt="" />
+          <h3>DESSERT</h3>
+          <p>Selection of desserts, exotic fruits and coffee.<br />1.990 kr.</p>
         </div>
       </section>
 
-      <hr />
+      <hr/>
 
       <section id="about" class="about-section">
         <h2>About Brún</h2>
@@ -104,7 +100,7 @@
       </section>
     </main>
 
-    <hr />
+    <hr/>
 
     <footer class="cover-footer">
       <div>
